datalogger/transceive/sms/smsParse.log
  File "/KWH/datalogger/transceive/sms/smsParse.py", line 247
    p = subprocess.Popen([delPath, int(messNum[message]]))
                                                       ^
SyntaxError: invalid syntax
